# SPARC

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml
.github/workflows/: python-package-conda.yml
crates/sparc-cli/: Cargo.toml
crates/sparc-cli/src/: main.rs
crates/sparc-cli/src/commands/: analyze.rs  batch.rs  count.rs  distributed.rs  extract.rs  mod.rs  pipeline.rs  qc.rs  validate.rs
crates/sparc-core/: Cargo.toml
crates/sparc-core/src/: aligner.rs  lib.rs  streaming.rs
crates/sparc-core/src/analysis/: cluster.rs  mod.rs  neighbors.rs  normalize.rs  pca.rs
crates/sparc-core/src/bam/: mod.rs  parser.rs  writer.rs
crates/sparc-core/src/barcode/: matcher.rs  mod.rs  whitelist.rs
crates/sparc-core/src/count/: matrix.rs  mod.rs
crates/sparc-core/src/fastq/: mod.rs  parser.rs  writer.rs
crates/sparc-core/src/protocols/: dropseq.rs  indrop.rs  mod.rs  scirna.rs  smartseq.rs  tenx_3prime.rs  tenx_5prime.rs
crates/sparc-core/src/qc/: metrics.rs  mod.rs
crates/sparc-core/src/umi/: dedup.rs  mod.rs
crates/sparc-core/src/validation/: metrics.rs  mod.rs  report.rs  stages.rs  synthetic.rs
crates/sparc-core/tests/: integration_tests.rs  validation_tests.rs
crates/sparc-py/: Cargo.toml
crates/sparc-py/src/: analysis.rs  bam.rs  barcode.rs  fastq.rs  lib.rs  matrix.rs  qc.rs  validation_py.rs
data/whitelists/: sample_whitelist.txt
python/sparc/: __init__.py  analysis.py  batch.py  io.py  plotting.py  preprocessing.py  streaming.py  web.py
python/sparc/validation/: __init__.py  metrics.py  runner.py  synthetic.py
tests/python/: conftest.py  test_sparc.py  test_validation.py
web/backend/: main.py
web/backend/api/: routes.py  websocket.py
web/backend/workers/: pipeline.py
web/frontend/: index.html  package.json
web/frontend/src/: App.tsx
web/frontend/src/components/: Pipeline.tsx  QCDashboard.tsx  QCReport.tsx  SampleComparison.tsx  Upload.tsx  Visualization.tsx
web/frontend/src/hooks/: useWebSocket.ts
