[package]
name = "sparc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SPARC: Single-cell Pipeline Accelerated in Rust Core"

[dependencies]
needletail = { workspace = true }
rust-htslib = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
